feat: 🎸 add icon,loading and tag feature about button
add icon,loading and tag feature about button

--- a/src/button/style/button-base.scss
+++ b/src/button/style/button-base.scss
@@ -26,9 +26,12 @@
   &[disabled] {
     @apply cursor-not-allowed
   }
-
+  
   &.s-btn--block {
     @apply block w-full
+  }
+  &.s-btn--loading {
+    // @apply 
   }
 }
 
