feat: 🎸 add space component
add space component

--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -1,4 +1,5 @@
 // 变量
+$prefix: 's';
 // 定义主题变量
 $s-border-radius: var(--s-border-radius, 2px); //一般圆角
 $s-font-size-sm: var(--s-font-size-md, 10px); //当组件size为''时使用此字号大小
