--- a/src/index.scss
+++ b/src/index.scss
@@ -2,4 +2,5 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "button/style/button.scss"
+@import "button/style/button.scss";
+@import "space/style/index.scss";
