--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,4 @@
 @import "button/style/button.scss";
 @import "space/style/index.scss";
 @import "input/style/index.scss";
+@import "trigger/style/index.scss";
