'tree组件待选中功能添加'

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,4 @@
 @import "space/style/index.scss";
 @import "input/style/index.scss";
 @import "trigger/style/index.scss";
+@import "tree/style/tree.scss";
