--- a/src/tree/style/tree.scss
+++ b/src/tree/style/tree.scss
@@ -1,4 +1,16 @@
 .s-tree {
-  /* your component style */
-
+  .s-tree__node {
+    &--content {
+      border: 1px solid transparent
+    }
+    &--drop-inner {
+      border: 1px solid silver
+    }
+    &--drop-next {
+      border-bottom: 1px solid silver
+    }
+    &--drop-prev {
+      border-top: 1px solid silver
+    }
+  }
 }
