--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,4 @@
 @import "input/style/index.scss";
 @import "trigger/style/index.scss";
 @import "tree/style/tree.scss";
+@import "switch/style/switch.scss";
