--- a/src/pagination/style/pagination.scss
+++ b/src/pagination/style/pagination.scss
@@ -1,16 +1,17 @@
 .s-pagination {
   display: flex;
-  /* your component style */
-  .s-pager {
-    list-style: none;
-    display: flex;
-    padding-left: 0;
-    li {
-      margin-top: 0;
-      padding: 0 4px;
-    }
-    li.current {
-      color: rgb(96, 96, 255);
-    }
+}
+
+.s-pager {
+  list-style: none !important;
+  display: flex;
+  padding-left: 0;
+  li {
+    margin-top: 0 !important;
+    padding: 0 4px;
+    cursor: pointer;
+  }
+  li.current {
+    color: rgb(96, 96, 255);
   }
 }
